Intro description IE fix

--- a/source/sass/components/_intro.scss
+++ b/source/sass/components/_intro.scss
@@ -239,5 +239,6 @@
 
   .intro__description {
     padding-bottom: 122px;
+    width: 300px;
   }
 }
